--- a/src/main/resources/plugin.conf
+++ b/src/main/resources/plugin.conf
@@ -21,4 +21,14 @@ dependencies {
     artifacts = ["org.jetbrains.kotlin:kotlin-stdlib:2.0.0", "net.kyori:adventure-text-minimessage:4.23.0"]
   }
 
+  plugins {
+    softDepend = [
+      {
+        name = "FightSystem"
+        version = "1.0.0"
+        versionLimit = ALL
+      }
+    ]
+  }
+
 }
